--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,46 @@
-.img {
-  height: 500px;
-  width: 200px;
+body {
+  background-color: #c3c3c3;
+  display: flex;
+
+  justify-content: center;
+  align-items: center;
+}
+
+img {
+  height: 200px;
+  aspect-ratio: 1;
+}
+
+.card {
+  border: 2px solid orangered;
+  border-radius: 10px;
+  background-color: #fff;
+  width: 20em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 1em;
+}
+
+.card h1 {
+  color: red;
+}
+
+.card h3 {
+  align-self: flex-start;
+  padding-right: 10px;
+  margin: 1em;
+  box-sizing: border-box;
+  color: red;
+}
+
+.card button {
+  margin: 15px auto;
+  padding: 0.5em 1.5em;
+  background-color: orangered;
+  color: #fff;
+  font-size: 1rem;
+  border: none;
+  border-radius: 1rem;
 }
